--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "slugify": "^1.6.6"
   }
 }
